--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "url": "git@github.com:charliesbox/react-native-media-controls.git"
   },
   "dependencies": {
-    "react-native-slider": "^0.11.0"
+     "@react-native-community/slider": "^2.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
